--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Te Tai Hou Teams – 2025</title>
+<title>Te Tai Hou Teams – Term 1 2026</title>
 
 <style>
 body {
@@ -61,7 +61,7 @@ tbody tr:hover { background: #f9fafb; }
   <a href="https://www.poriruaheatbasketball.org" target="_blank">
     <img src="images/logo.png" alt="Porirua Heat Logo">
   </a>
-  <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1>
+  <h1>TE TAI HOU TEAMS – 2026 TERM 1</h1>
 </header>
 
 <div class="controls">
@@ -301,3 +301,4 @@ generatePDFBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
