--- a/index.html
+++ b/index.html
@@ -98,12 +98,10 @@ let gdRegIndex = -1;
 
 /* ✅ ADDED NEW TEAM HERE */
 const groupOrder = [
-  "10U Dev","10U Elite",
-  "12U Dev","12U Elite",
-  "Porirua Heat 12U",     // ✅ NEW TEAM INSERTED
-  "14U Black","14U Orange","14U Blaze","14U Flames",
-  "16U Dev","16U Elite",
-  "20U","Mens","Womens"
+  "10U", 
+  "12U Elite",
+  "14U Dev Orange", "14U Elite Black","14U Elite Gold", "16U Elite Black","16U Elite Gold",
+  "18U Black", "18U Gold","Mens","Mastas - Womens", "Teine - Womens"
 ];
 
 // --- Load CSV ---
@@ -301,4 +299,5 @@ generatePDFBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
