--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@ let gdRegIndex = -1;
 
 /* ✅ ADDED NEW TEAM HERE */
 const groupOrder = [
-  "10U", 
-  "12U Elite",
-  "14U Dev Orange", "14U Elite Black","14U Elite Gold", "16U Elite Black","16U Elite Gold",
-  "18U Black", "18U Gold","Mens","Mastas - Womens", "Teine - Womens"
+  "10U - Coach - Pusa Ala", 
+  "12U Elite - Coach - Kurt Falconer",
+  "14U Dev Orange - Coach - Emilina Motu", "14U Elite Black - Coach - Nixon Penese","14U Elite Gold - Coach - Toa Madar", "16U Elite Black - Coach - Nixon Penese","16U Elite Gold - Coach - Sariah Penese",
+  "18U Gold - Coach - Nixon Penese", "18U Black - Coach - Yannis Sue","Mens - Coach - Nataliah Penese","Mastas - Womens - Coach - Ailani Penese", "Teine - Womens - Coach - Nixon Penese"
 ];
 
 // --- Load CSV ---
@@ -299,5 +299,6 @@ generatePDFBtn.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
